--- a/index.html
+++ b/index.html
@@ -34,5 +34,94 @@
 			<p>Find a store</p>
 		</div>
 	</nav>
+
+	<nav2>
+		<a href="#">All products</a>
+		<a href="#">Featured</a>
+		<a href="#">Previous Orders</a>
+		<a href="#">Favourite Products</a>
+	</nav2>
+
+	<main>
+		<div id="latte">
+			<img src="images/latte.jpg">
+			<h2>Choose your mood</h2>
+			<p>Go for the comforting flavors of a Pistachio Latte or the lively layers of an Iced Brown Sugar Oatmilk Shaken Espresso.</p>
+			<a href="#">Explore the winter menu</a>
+		</div>
+
+		<div id="uber">
+			<img src="images/uber-eats.jpg">
+			<h2>Coffee delivered. Day made.</h2>
+			<p>Your go-to order can come to you!*</p>
+			<a href="#">Order now</a>
+		</div>
+
+		<div id="card">
+			<img src="images/card.jpg">
+			<p>Earning 4,500 Bonus Stars is Super Starifying</p>
+			<p>Earn more Stars and even more Rewards with a <strong>$0 intro annual fee for your first year</strong> with the Starbucks® Rewards Visa® Card. Plus your Stars won’t expire – an exclusive Starbucks benefit for cardmembers. Now that’s Super Starifying.</p>
+			<a href="#">Learn more</a>
+		</div>
+
+		<div id="black">
+			<img src="images/black-history.jpg">
+			<p>Earning 4,500 Bonus Stars is Super Starifying</p>
+			<p>Join us as we recognize the everyday Black excellence of our partners (employees). Explore ways to help cultivate the next generation of excellence.</p>
+			<a href="#">Learn more</a>
+		</div>
+
+		<p>*Menu limited. Restricted delivery area. Available in participating locations only. Fees subject to change. Prices for Starbucks® items purchased through Uber Eats may be higher than posted in stores or as marked. See the Uber Eats app for details.</p>
+	</main>
+
+	<section>
+		<div>
+			<p>About Us</p>
+			<ion-icon name="chevron-down-outline"></ion-icon>
+			<!-- <ion-icon name="chevron-up-outline"></ion-icon> -->
+		</div>
+		
+		<div>
+			<p>Careers</p>
+			<ion-icon name="chevron-down-outline"></ion-icon>
+			<!-- <ion-icon name="chevron-up-outline"></ion-icon> -->
+		</div>
+		
+		<div>
+			<p>Social Impact</p>
+			<ion-icon name="chevron-down-outline"></ion-icon>
+			<!-- <ion-icon name="chevron-up-outline"></ion-icon> -->
+		</div>
+		
+		<div>
+			<p>For Business Partners</p>
+			<ion-icon name="chevron-down-outline"></ion-icon>
+			<!-- <ion-icon name="chevron-up-outline"></ion-icon> -->
+		</div>
+		
+		<div>
+			<p>Order and Pickup</p>
+			<ion-icon name="chevron-down-outline"></ion-icon>
+			<!-- <ion-icon name="chevron-up-outline"></ion-icon> -->
+		</div>		
+	</section>
+
+	<footer>
+		<div>
+			<img src="images/spotify.svg" alt="spotify logo">
+			<ion-icon name="logo-facebook"></ion-icon>
+			<ion-icon name="logo-pinterest"></ion-icon>
+			<ion-icon name="logo-instagram"></ion-icon>
+			<ion-icon name="logo-youtube"></ion-icon>
+			<ion-icon name="logo-twitter"></ion-icon>
+		</div>
+		<div>
+			<a href="#">Privacy Policy</a>
+			<a href="#">Terms of Use</a>
+			<a href="#">CA Supply Chain Act</a>
+			<a href="#">Cookie Preferences</a>
+		</div>
+		<p>© 2022 Starbucks Coffee Company. All rights reserved.</p>
+	</footer>
 </body>
 </html>
