--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="styles.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
 	<script type="text/javascript" src="index.js" defer></script>
 	<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 	<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
@@ -11,8 +14,8 @@
 </head>
 <body>
 	<header>
-		<img src="images/logo.svg">
-		<ion-icon name="menu-outline"></ion-icon>
+		<img src="images/logo.svg" id="logo" alt="starbucks logo">
+		<ion-icon name="menu-outline" class="menu-closed"></ion-icon>
 		<!-- <ion-icon name="close-outline"></ion-icon> -->
 	</header>
 
@@ -44,31 +47,39 @@
 
 	<main>
 		<div id="latte">
-			<img src="images/latte.jpg">
-			<h2>Choose your mood</h2>
-			<p>Go for the comforting flavors of a Pistachio Latte or the lively layers of an Iced Brown Sugar Oatmilk Shaken Espresso.</p>
-			<a href="#">Explore the winter menu</a>
+			<img src="images/latte.jpg" id="latte-image" alt="image of a latte">
+			<div class="text-area">
+				<h2>Choose your mood</h2>
+				<p>Go for the comforting flavors of a Pistachio Latte or the lively layers of an Iced Brown Sugar Oatmilk Shaken Espresso.</p>
+				<a href="#">Explore the winter menu</a>
+			</div>
 		</div>
 
 		<div id="uber">
-			<img src="images/uber-eats.jpg">
-			<h2>Coffee delivered. Day made.</h2>
-			<p>Your go-to order can come to you!*</p>
-			<a href="#">Order now</a>
+			<img src="images/uber-eats.jpg" id="ue" alt="images of uber eats">
+			<div class="text-area">
+				<h2>Coffee delivered. Day made.</h2>
+				<p>Your go-to order can come to you!*</p>
+				<a href="#">Order now</a>
+			</div>
 		</div>
 
 		<div id="card">
-			<img src="images/card.jpg">
-			<p>Earning 4,500 Bonus Stars is Super Starifying</p>
-			<p>Earn more Stars and even more Rewards with a <strong>$0 intro annual fee for your first year</strong> with the Starbucks® Rewards Visa® Card. Plus your Stars won’t expire – an exclusive Starbucks benefit for cardmembers. Now that’s Super Starifying.</p>
-			<a href="#">Learn more</a>
+			<img src="images/card.jpg" id="card-img" alt="Starbucks Rewards Card">
+			<div class="text-area">
+				<p>Earning 4,500 Bonus Stars is Super Starifying</p>
+				<p>Earn more Stars and even more Rewards with a <strong>$0 intro annual fee for your first year</strong> with the Starbucks® Rewards Visa® Card. Plus your Stars won’t expire – an exclusive Starbucks benefit for cardmembers. Now that’s Super Starifying.</p>
+				<a href="#">Learn more</a>
+			</div>
 		</div>
 
 		<div id="black">
-			<img src="images/black-history.jpg">
-			<p>Earning 4,500 Bonus Stars is Super Starifying</p>
-			<p>Join us as we recognize the everyday Black excellence of our partners (employees). Explore ways to help cultivate the next generation of excellence.</p>
-			<a href="#">Learn more</a>
+			<img src="images/black-history.jpg" id="black-guy" alt="Image of a dark skinned starbucks employee">
+			<div class="text-area">
+				<p>Earning 4,500 Bonus Stars is Super Starifying</p>
+				<p>Join us as we recognize the everyday Black excellence of our partners (employees). Explore ways to help cultivate the next generation of excellence.</p>
+				<a href="#">Learn more</a>
+			</div>
 		</div>
 
 		<p>*Menu limited. Restricted delivery area. Available in participating locations only. Fees subject to change. Prices for Starbucks® items purchased through Uber Eats may be higher than posted in stores or as marked. See the Uber Eats app for details.</p>
