--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 				<p>Menu</p>
 				<ion-icon name="chevron-forward-outline"></ion-icon>
 			</div>
-			<a href="#">Rewards</a>
-			<a href="#">Gift Cards</a>
+			<a href="#" class="links">Rewards</a>
+			<a href="#" class="links">Gift Cards</a>
 		</div>
 		<div>
-			<a href="#">Sign In</a>
-			<a href="#">Log In</a>
+			<a href="#" class="links">Sign In</a>
+			<a href="#" class="links">Log In</a>
 		</div>
 		<div>
 			<ion-icon name="location"></ion-icon>
@@ -39,10 +39,10 @@
 	</nav>
 
 	<nav2>
-		<a href="#">All products</a>
-		<a href="#">Featured</a>
-		<a href="#">Previous Orders</a>
-		<a href="#">Favourite Products</a>
+		<a href="#" class="links">All products</a>
+		<a href="#" class="links">Featured</a>
+		<a href="#" class="links">Previous Orders</a>
+		<a href="#" class="links">Favourite Products</a>
 	</nav2>
 
 	<main>
@@ -51,7 +51,7 @@
 			<div class="text-area">
 				<h2>Choose your mood</h2>
 				<p>Go for the comforting flavors of a Pistachio Latte or the lively layers of an Iced Brown Sugar Oatmilk Shaken Espresso.</p>
-				<a href="#">Explore the winter menu</a>
+				<a href="#" class="main-links">Explore the winter menu</a>
 			</div>
 		</div>
 
@@ -60,7 +60,7 @@
 			<div class="text-area">
 				<h2>Coffee delivered. Day made.</h2>
 				<p>Your go-to order can come to you!*</p>
-				<a href="#">Order now</a>
+				<a href="#" class="main-links">Order now</a>
 			</div>
 		</div>
 
@@ -69,7 +69,7 @@
 			<div class="text-area">
 				<p>Earning 4,500 Bonus Stars is Super Starifying</p>
 				<p>Earn more Stars and even more Rewards with a <strong>$0 intro annual fee for your first year</strong> with the Starbucks® Rewards Visa® Card. Plus your Stars won’t expire – an exclusive Starbucks benefit for cardmembers. Now that’s Super Starifying.</p>
-				<a href="#">Learn more</a>
+				<a href="#" class="main-links">Learn more</a>
 			</div>
 		</div>
 
@@ -78,7 +78,7 @@
 			<div class="text-area">
 				<p>Earning 4,500 Bonus Stars is Super Starifying</p>
 				<p>Join us as we recognize the everyday Black excellence of our partners (employees). Explore ways to help cultivate the next generation of excellence.</p>
-				<a href="#">Learn more</a>
+				<a href="#" class="main-links">Learn more</a>
 			</div>
 		</div>
 
@@ -127,10 +127,10 @@
 			<ion-icon name="logo-twitter"></ion-icon>
 		</div>
 		<div>
-			<a href="#">Privacy Policy</a>
-			<a href="#">Terms of Use</a>
-			<a href="#">CA Supply Chain Act</a>
-			<a href="#">Cookie Preferences</a>
+			<a href="#" class="links">Privacy Policy</a>
+			<a href="#" class="links">Terms of Use</a>
+			<a href="#" class="links">CA Supply Chain Act</a>
+			<a href="#" class="links">Cookie Preferences</a>
 		</div>
 		<p>© 2022 Starbucks Coffee Company. All rights reserved.</p>
 	</footer>
