Made more progress

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 		<div id="uber">
 			<img src="images/uber-eats.jpg" id="ue" alt="images of uber eats">
-			<div class="text-area">
+			<div class="text-area" id="uta">
 				<h2>Coffee delivered. Day made.</h2>
 				<p>Your go-to order can come to you!*</p>
 				<a href="#" class="main-links">Order now</a>
@@ -66,8 +66,8 @@
 
 		<div id="card">
 			<img src="images/card.jpg" id="card-img" alt="Starbucks Rewards Card">
-			<div class="text-area">
-				<p>Earning 4,500 Bonus Stars is Super Starifying</p>
+			<div class="text-area" id="cta">
+				<h2>Earning 4,500 Bonus Stars is Super Starifying</h2>
 				<p>Earn more Stars and even more Rewards with a <strong>$0 intro annual fee for your first year</strong> with the Starbucks® Rewards Visa® Card. Plus your Stars won’t expire – an exclusive Starbucks benefit for cardmembers. Now that’s Super Starifying.</p>
 				<a href="#" class="main-links">Learn more</a>
 			</div>
@@ -76,7 +76,7 @@
 		<div id="black">
 			<img src="images/black-history.jpg" id="black-guy" alt="Image of a dark skinned starbucks employee">
 			<div class="text-area">
-				<p>Earning 4,500 Bonus Stars is Super Starifying</p>
+				<h2>Celebrating Black History Month</h2>
 				<p>Join us as we recognize the everyday Black excellence of our partners (employees). Explore ways to help cultivate the next generation of excellence.</p>
 				<a href="#" class="main-links">Learn more</a>
 			</div>
