--- a/index.html
+++ b/index.html
@@ -75,50 +75,89 @@
 
 		<div id="black">
 			<img src="images/black-history.jpg" id="black-guy" alt="Image of a dark skinned starbucks employee">
-			<div class="text-area">
+			<div class="text-area" id="bta">
 				<h2>Celebrating Black History Month</h2>
 				<p>Join us as we recognize the everyday Black excellence of our partners (employees). Explore ways to help cultivate the next generation of excellence.</p>
 				<a href="#" class="main-links">Learn more</a>
 			</div>
 		</div>
 
-		<p>*Menu limited. Restricted delivery area. Available in participating locations only. Fees subject to change. Prices for Starbucks® items purchased through Uber Eats may be higher than posted in stores or as marked. See the Uber Eats app for details.</p>
+		<p id="note">*Menu limited. Restricted delivery area. Available in participating locations only. Fees subject to change. Prices for Starbucks® items purchased through Uber Eats may be higher than posted in stores or as marked. See the Uber Eats app for details.</p>
 	</main>
 
-	<section>
-		<div>
+	<section class="above-footer">
+		<div class="dropdown-divs">
 			<p>About Us</p>
-			<ion-icon name="chevron-down-outline"></ion-icon>
-			<!-- <ion-icon name="chevron-up-outline"></ion-icon> -->
+			<ion-icon name="chevron-down-outline" class="toggle"></ion-icon>
+			<!-- <ion-icon name="chevron-up-outline" class="toggle"></ion-icon> -->
+		</div>
+
+		<div class="hidden-div">
+			<a href="#" class="links">Our Company</a>
+			<a href="#" class="links">Our Coffee</a>
+			<a href="#" class="links">Stories and News</a>
+			<a href="#" class="links">Starbucks Archieve</a>
+			<a href="#" class="links">Investor Relations</a>
+			<a href="#" class="links">Customer Service</a>
 		</div>
 		
-		<div>
+		<div class="dropdown-divs">
 			<p>Careers</p>
-			<ion-icon name="chevron-down-outline"></ion-icon>
-			<!-- <ion-icon name="chevron-up-outline"></ion-icon> -->
+			<ion-icon name="chevron-down-outline" class="toggle"></ion-icon>
+			<!-- <ion-icon name="chevron-up-outline" class="toggle"></ion-icon> -->
+		</div>
+
+		<div class="hidden-div">
+			<a href="#" class="links">Culture and Values</a>
+			<a href="#" class="links">Inclusion, Diversity, and Equity</a>
+			<a href="#" class="links">College Achievement Plan</a>
+			<a href="#" class="links">Alumni Community</a>
+			<a href="#" class="links">U.S. Careers</a>
+			<a href="#" class="links">International Careers</a>
 		</div>
 		
-		<div>
+		<div class="dropdown-divs">
 			<p>Social Impact</p>
-			<ion-icon name="chevron-down-outline"></ion-icon>
-			<!-- <ion-icon name="chevron-up-outline"></ion-icon> -->
+			<ion-icon name="chevron-down-outline" class="toggle"></ion-icon>
+			<!-- <ion-icon name="chevron-up-outline" class="toggle"></ion-icon> -->
+		</div>
+
+		<div class="hidden-div">
+			<a href="#" class="links">People</a>
+			<a href="#" class="links">Planet</a>
+			<a href="#" class="links">Environmental and Social Impact Reporting</a>
 		</div>
 		
-		<div>
+		<div class="dropdown-divs">
 			<p>For Business Partners</p>
-			<ion-icon name="chevron-down-outline"></ion-icon>
-			<!-- <ion-icon name="chevron-up-outline"></ion-icon> -->
+			<ion-icon name="chevron-down-outline" class="toggle"></ion-icon>
+			<!-- <ion-icon name="chevron-up-outline" class="toggle"></ion-icon> -->
+		</div>
+
+		<div class="hidden-div">
+			<a href="#" class="links">Landlord Support Center</a>
+			<a href="#" class="links">Suppliers</a>			
+			<a href="#" class="links">Corporate Gift Card Sales</a>
+			<a href="#" class="links">Office and Foodservice Coffee</a>
 		</div>
 		
-		<div>
+		<div class="dropdown-divs">
 			<p>Order and Pickup</p>
-			<ion-icon name="chevron-down-outline"></ion-icon>
-			<!-- <ion-icon name="chevron-up-outline"></ion-icon> -->
-		</div>		
+			<ion-icon name="chevron-down-outline" class="toggle"></ion-icon>
+			<!-- <ion-icon name="chevron-up-outline" class="toggle"></ion-icon> -->
+		</div>
+
+		<div class="hidden-div">
+			<a href="#" class="links">Order on the App</a>
+			<a href="#" class="links">Order on the Web</a>			
+			<a href="#" class="links">elivery</a>
+			<a href="#" class="links">Order and Pickup Options</a>
+			<a href="#" class="links">Explore and Find Coffee for Home</a>
+		</div>
 	</section>
 
 	<footer>
-		<div>
+		<div id="reach-icons">
 			<img src="images/spotify.svg" alt="spotify logo">
 			<ion-icon name="logo-facebook"></ion-icon>
 			<ion-icon name="logo-pinterest"></ion-icon>
@@ -126,7 +165,7 @@
 			<ion-icon name="logo-youtube"></ion-icon>
 			<ion-icon name="logo-twitter"></ion-icon>
 		</div>
-		<div>
+		<div id="sfd">
 			<a href="#" class="links">Privacy Policy</a>
 			<a href="#" class="links">Terms of Use</a>
 			<a href="#" class="links">CA Supply Chain Act</a>
