Done with css for mobile view.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	</header>
 
 	<nav>
-		<div>
+		<div id="top-menu">
 			<div>
 				<p>Menu</p>
 				<ion-icon name="chevron-forward-outline"></ion-icon>
@@ -28,21 +28,27 @@
 			<a href="#" class="links">Rewards</a>
 			<a href="#" class="links">Gift Cards</a>
 		</div>
-		<div>
-			<a href="#" class="links">Sign In</a>
-			<a href="#" class="links">Log In</a>
+		<div id="middle-menu">
+			<a href="#" class="links">Sign in</a>
+			<a href="#" class="links">Join now</a>
 		</div>
-		<div>
-			<ion-icon name="location"></ion-icon>
+		<div id="bottom-menu">
+			<ion-icon name="location" id="li"></ion-icon>
 			<p>Find a store</p>
 		</div>
 	</nav>
 
 	<nav2>
-		<a href="#" class="links">All products</a>
-		<a href="#" class="links">Featured</a>
-		<a href="#" class="links">Previous Orders</a>
-		<a href="#" class="links">Favourite Products</a>
+		<div id="nav2-header">
+			<ion-icon name="chevron-back-outline"></ion-icon>
+			<p>Menu</p>
+		</div>
+		<div id="nav2-other">
+			<a href="#" class="links">All products</a>
+			<a href="#" class="links">Featured</a>
+			<a href="#" class="links">Previous Orders</a>
+			<a href="#" class="links">Favorite Products</a>
+		</div>
 	</nav2>
 
 	<main>
