--- a/index.html
+++ b/index.html
@@ -14,8 +14,22 @@
 </head>
 <body>
 	<header>
-		<img src="images/logo.svg" id="logo" alt="starbucks logo">
+		<div id="left-header">
+			<img src="images/logo.svg" id="logo" alt="starbucks logo">
+			<a href="#" class="links hidden-header">MENU</a>
+			<a href="#" class="links hidden-header">REWARDS</a>
+			<a href="#" class="links hidden-header">GIFT CARDS</a>
+		</div>
 		<ion-icon name="menu-outline" class="menu-closed"></ion-icon>
+
+		<div id="right-header">
+			<div id="locate-store">
+				<ion-icon name="location" class="li"></ion-icon>
+				<p>Find a store</p>
+			</div>
+			<a href="#" class="links">Sign in</a>
+			<a href="#" class="links">Join now</a>
+		</div>
 	</header>
 
 	<nav id="nav">
@@ -32,7 +46,7 @@
 			<a href="#" class="links">Join now</a>
 		</div>
 		<div id="bottom-menu">
-			<ion-icon name="location" id="li"></ion-icon>
+			<ion-icon name="location" class="li"></ion-icon>
 			<p>Find a store</p>
 		</div>
 	</nav>
@@ -94,70 +108,73 @@
 		<div class="dropdown-divs">
 			<p>About Us</p>
 			<ion-icon name="chevron-down-outline" class="toggle"></ion-icon>
-			<!-- <ion-icon name="chevron-up-outline" class="toggle"></ion-icon> -->
 		</div>
 
-		<div class="hidden-div">
-			<a href="#" class="links">Our Company</a>
-			<a href="#" class="links">Our Coffee</a>
-			<a href="#" class="links">Stories and News</a>
-			<a href="#" class="links">Starbucks Archieve</a>
-			<a href="#" class="links">Investor Relations</a>
-			<a href="#" class="links">Customer Service</a>
+		<div class="youknow">
+			<div class="hidden-div">
+				<a href="#" class="links hidden-links">Our Company</a>
+				<a href="#" class="links hidden-links">Our Coffee</a>
+				<a href="#" class="links hidden-links">Stories and News</a>
+				<a href="#" class="links hidden-links">Starbucks Archieve</a>
+				<a href="#" class="links hidden-links">Investor Relations</a>
+				<a href="#" class="links hidden-links">Customer Service</a>
+			</div>
 		</div>
-		
 		<div class="dropdown-divs">
 			<p>Careers</p>
 			<ion-icon name="chevron-down-outline" class="toggle"></ion-icon>
-			<!-- <ion-icon name="chevron-up-outline" class="toggle"></ion-icon> -->
 		</div>
 
-		<div class="hidden-div">
-			<a href="#" class="links">Culture and Values</a>
-			<a href="#" class="links">Inclusion, Diversity, and Equity</a>
-			<a href="#" class="links">College Achievement Plan</a>
-			<a href="#" class="links">Alumni Community</a>
-			<a href="#" class="links">U.S. Careers</a>
-			<a href="#" class="links">International Careers</a>
+		<div class="youknow">
+			<div class="hidden-div">
+				<a href="#" class="links hidden-links">Culture and Values</a>
+				<a href="#" class="links hidden-links">Inclusion, Diversity, and Equity</a>
+				<a href="#" class="links hidden-links">College Achievement Plan</a>
+				<a href="#" class="links hidden-links">Alumni Community</a>
+				<a href="#" class="links hidden-links">U.S. Careers</a>
+				<a href="#" class="links hidden-links">International Careers</a>
+			</div>
 		</div>
-		
 		<div class="dropdown-divs">
 			<p>Social Impact</p>
 			<ion-icon name="chevron-down-outline" class="toggle"></ion-icon>
-			<!-- <ion-icon name="chevron-up-outline" class="toggle"></ion-icon> -->
 		</div>
 
-		<div class="hidden-div">
-			<a href="#" class="links">People</a>
-			<a href="#" class="links">Planet</a>
-			<a href="#" class="links">Environmental and Social Impact Reporting</a>
+		<div class="youknow">
+			<div class="hidden-div">
+				<a href="#" class="links hidden-links">People</a>
+				<a href="#" class="links hidden-links">Planet</a>
+				<a href="#" class="links hidden-links">Environmental and Social Impact Reporting</a>
+			</div>
 		</div>
 		
 		<div class="dropdown-divs">
 			<p>For Business Partners</p>
 			<ion-icon name="chevron-down-outline" class="toggle"></ion-icon>
-			<!-- <ion-icon name="chevron-up-outline" class="toggle"></ion-icon> -->
 		</div>
 
-		<div class="hidden-div">
-			<a href="#" class="links">Landlord Support Center</a>
-			<a href="#" class="links">Suppliers</a>			
-			<a href="#" class="links">Corporate Gift Card Sales</a>
-			<a href="#" class="links">Office and Foodservice Coffee</a>
+		<div class="youknow">
+			<div class="hidden-div">
+				<a href="#" class="links hidden-links">Landlord Support Center</a>
+				<a href="#" class="links hidden-links">Suppliers</a>			
+				<a href="#" class="links hidden-links">Corporate Gift Card Sales</a>
+				<a href="#" class="links hidden-links">Office and Foodservice Coffee</a>
+			</div>
 		</div>
 		
 		<div class="dropdown-divs">
 			<p>Order and Pickup</p>
 			<ion-icon name="chevron-down-outline" class="toggle"></ion-icon>
-			<!-- <ion-icon name="chevron-up-outline" class="toggle"></ion-icon> -->
 		</div>
 
-		<div class="hidden-div">
-			<a href="#" class="links">Order on the App</a>
-			<a href="#" class="links">Order on the Web</a>			
-			<a href="#" class="links">elivery</a>
-			<a href="#" class="links">Order and Pickup Options</a>
-			<a href="#" class="links">Explore and Find Coffee for Home</a>
+		<div class="youknow">
+			<div class="hidden-div">
+				<a href="#" class="links hidden-links">Order on the App</a>
+				<a href="#" class="links hidden-links">Order on the Web</a>			
+				<a href="#" class="links hidden-links">Delivery</a>
+				<a href="#" class="links hidden-links">Order and Pickup Options</a>
+				<a href="#" class="links hidden-links">Explore and Find Coffee for Home</a>
+			</div>
 		</div>
 	</section>
 
@@ -171,10 +188,10 @@
 			<ion-icon name="logo-twitter"></ion-icon>
 		</div>
 		<div id="sfd">
-			<a href="#" class="links">Privacy Policy</a>
-			<a href="#" class="links">Terms of Use</a>
-			<a href="#" class="links">CA Supply Chain Act</a>
-			<a href="#" class="links">Cookie Preferences</a>
+			<a href="#" class="links hidden-links">Privacy Policy</a>
+			<a href="#" class="links hidden-links">Terms of Use</a>
+			<a href="#" class="links hidden-links">CA Supply Chain Act</a>
+			<a href="#" class="links hidden-links">Cookie Preferences</a>
 		</div>
 		<p>© 2022 Starbucks Coffee Company. All rights reserved.</p>
 	</footer>
