Finished for tablets, almost done for bigger than 1024px. Issue on mobile still exists.

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 	<header>
 		<div id="left-header">
 			<img src="images/logo.svg" id="logo" alt="starbucks logo">
-			<a href="#" class="links hidden-header">MENU</a>
-			<a href="#" class="links hidden-header">REWARDS</a>
-			<a href="#" class="links hidden-header">GIFT CARDS</a>
+			<a href="#" class="links hidden">MENU</a>
+			<a href="#" class="links hidden">REWARDS</a>
+			<a href="#" class="links hidden">GIFT CARDS</a>
 		</div>
 		<ion-icon name="menu-outline" class="menu-closed"></ion-icon>
 
@@ -107,7 +107,7 @@
 	<section class="above-footer">
 		<div class="dropdown-divs">
 			<p>About Us</p>
-			<ion-icon name="chevron-down-outline" class="toggle"></ion-icon>
+			<ion-icon name="chevron-down-outline" class="toggle hidden-big"></ion-icon>
 		</div>
 
 		<div class="youknow">
@@ -122,7 +122,7 @@
 		</div>
 		<div class="dropdown-divs">
 			<p>Careers</p>
-			<ion-icon name="chevron-down-outline" class="toggle"></ion-icon>
+			<ion-icon name="chevron-down-outline" class="toggle hidden-big"></ion-icon>
 		</div>
 
 		<div class="youknow">
@@ -137,7 +137,7 @@
 		</div>
 		<div class="dropdown-divs">
 			<p>Social Impact</p>
-			<ion-icon name="chevron-down-outline" class="toggle"></ion-icon>
+			<ion-icon name="chevron-down-outline" class="toggle hidden-big"></ion-icon>
 		</div>
 
 		<div class="youknow">
@@ -150,7 +150,7 @@
 		
 		<div class="dropdown-divs">
 			<p>For Business Partners</p>
-			<ion-icon name="chevron-down-outline" class="toggle"></ion-icon>
+			<ion-icon name="chevron-down-outline" class="toggle hidden-big"></ion-icon>
 		</div>
 
 		<div class="youknow">
@@ -164,7 +164,7 @@
 		
 		<div class="dropdown-divs">
 			<p>Order and Pickup</p>
-			<ion-icon name="chevron-down-outline" class="toggle"></ion-icon>
+			<ion-icon name="chevron-down-outline" class="toggle hidden-big"></ion-icon>
 		</div>
 
 		<div class="youknow">
