Fixed issue on mobile

--- a/index.html
+++ b/index.html
@@ -105,75 +105,87 @@
 	</main>
 
 	<section class="above-footer">
-		<div class="dropdown-divs">
-			<p>About Us</p>
-			<ion-icon name="chevron-down-outline" class="toggle hidden-big"></ion-icon>
-		</div>
+		<div class="afdivs">
+			<div class="dropdown-divs">
+				<p>About Us</p>
+				<ion-icon name="chevron-down-outline" class="toggle hidden-big"></ion-icon>
+			</div>
 
-		<div class="youknow">
-			<div class="hidden-div">
-				<a href="#" class="links hidden-links">Our Company</a>
-				<a href="#" class="links hidden-links">Our Coffee</a>
-				<a href="#" class="links hidden-links">Stories and News</a>
-				<a href="#" class="links hidden-links">Starbucks Archieve</a>
-				<a href="#" class="links hidden-links">Investor Relations</a>
-				<a href="#" class="links hidden-links">Customer Service</a>
+			<div class="youknow">
+				<div class="hidden-div">
+					<a href="#" class="links hidden-links">Our Company</a>
+					<a href="#" class="links hidden-links">Our Coffee</a>
+					<a href="#" class="links hidden-links">Stories and News</a>
+					<a href="#" class="links hidden-links">Starbucks Archieve</a>
+					<a href="#" class="links hidden-links">Investor Relations</a>
+					<a href="#" class="links hidden-links">Customer Service</a>
+				</div>
 			</div>
 		</div>
-		<div class="dropdown-divs">
-			<p>Careers</p>
-			<ion-icon name="chevron-down-outline" class="toggle hidden-big"></ion-icon>
-		</div>
 
-		<div class="youknow">
-			<div class="hidden-div">
-				<a href="#" class="links hidden-links">Culture and Values</a>
-				<a href="#" class="links hidden-links">Inclusion, Diversity, and Equity</a>
-				<a href="#" class="links hidden-links">College Achievement Plan</a>
-				<a href="#" class="links hidden-links">Alumni Community</a>
-				<a href="#" class="links hidden-links">U.S. Careers</a>
-				<a href="#" class="links hidden-links">International Careers</a>
+		<div class="afdivs">
+			<div class="dropdown-divs">
+				<p>Careers</p>
+				<ion-icon name="chevron-down-outline" class="toggle hidden-big"></ion-icon>
+			</div>
+
+			<div class="youknow">
+				<div class="hidden-div">
+					<a href="#" class="links hidden-links">Culture and Values</a>
+					<a href="#" class="links hidden-links">Inclusion, Diversity, and Equity</a>
+					<a href="#" class="links hidden-links">College Achievement Plan</a>
+					<a href="#" class="links hidden-links">Alumni Community</a>
+					<a href="#" class="links hidden-links">U.S. Careers</a>
+					<a href="#" class="links hidden-links">International Careers</a>
+				</div>
 			</div>
 		</div>
-		<div class="dropdown-divs">
-			<p>Social Impact</p>
-			<ion-icon name="chevron-down-outline" class="toggle hidden-big"></ion-icon>
-		</div>
 
-		<div class="youknow">
-			<div class="hidden-div">
-				<a href="#" class="links hidden-links">People</a>
-				<a href="#" class="links hidden-links">Planet</a>
-				<a href="#" class="links hidden-links">Environmental and Social Impact Reporting</a>
+		<div class="afdivs">
+			<div class="dropdown-divs">
+				<p>Social Impact</p>
+				<ion-icon name="chevron-down-outline" class="toggle hidden-big"></ion-icon>
 			</div>
-		</div>
-		
-		<div class="dropdown-divs">
-			<p>For Business Partners</p>
-			<ion-icon name="chevron-down-outline" class="toggle hidden-big"></ion-icon>
-		</div>
 
-		<div class="youknow">
-			<div class="hidden-div">
-				<a href="#" class="links hidden-links">Landlord Support Center</a>
-				<a href="#" class="links hidden-links">Suppliers</a>			
-				<a href="#" class="links hidden-links">Corporate Gift Card Sales</a>
-				<a href="#" class="links hidden-links">Office and Foodservice Coffee</a>
+			<div class="youknow">
+				<div class="hidden-div">
+					<a href="#" class="links hidden-links">People</a>
+					<a href="#" class="links hidden-links">Planet</a>
+					<a href="#" class="links hidden-links">Environmental and Social Impact Reporting</a>
+				</div>
 			</div>
 		</div>
 		
-		<div class="dropdown-divs">
-			<p>Order and Pickup</p>
-			<ion-icon name="chevron-down-outline" class="toggle hidden-big"></ion-icon>
-		</div>
+		<div class="afdivs">
+			<div class="dropdown-divs">
+				<p>For Business Partners</p>
+				<ion-icon name="chevron-down-outline" class="toggle hidden-big"></ion-icon>
+			</div>
 
-		<div class="youknow">
-			<div class="hidden-div">
-				<a href="#" class="links hidden-links">Order on the App</a>
-				<a href="#" class="links hidden-links">Order on the Web</a>			
-				<a href="#" class="links hidden-links">Delivery</a>
-				<a href="#" class="links hidden-links">Order and Pickup Options</a>
-				<a href="#" class="links hidden-links">Explore and Find Coffee for Home</a>
+			<div class="youknow">
+				<div class="hidden-div">
+					<a href="#" class="links hidden-links">Landlord Support Center</a>
+					<a href="#" class="links hidden-links">Suppliers</a>			
+					<a href="#" class="links hidden-links">Corporate Gift Card Sales</a>
+					<a href="#" class="links hidden-links">Office and Foodservice Coffee</a>
+				</div>
+			</div>
+		</div>
+		
+		<div class="afdivs">
+			<div class="dropdown-divs">
+				<p>Order and Pickup</p>
+				<ion-icon name="chevron-down-outline" class="toggle hidden-big"></ion-icon>
+			</div>
+
+			<div class="youknow">
+				<div class="hidden-div">
+					<a href="#" class="links hidden-links">Order on the App</a>
+					<a href="#" class="links hidden-links">Order on the Web</a>			
+					<a href="#" class="links hidden-links">Delivery</a>
+					<a href="#" class="links hidden-links">Order and Pickup Options</a>
+					<a href="#" class="links hidden-links">Explore and Find Coffee for Home</a>
+				</div>
 			</div>
 		</div>
 	</section>
