Finished the projects.

--- a/index.html
+++ b/index.html
@@ -13,22 +13,25 @@
 	<title>Starbucks</title>
 </head>
 <body>
+	<div id="line"></div>
 	<header>
-		<div id="left-header">
-			<img src="images/logo.svg" id="logo" alt="starbucks logo">
-			<a href="#" class="links hidden">MENU</a>
-			<a href="#" class="links hidden">REWARDS</a>
-			<a href="#" class="links hidden">GIFT CARDS</a>
-		</div>
-		<ion-icon name="menu-outline" class="menu-closed"></ion-icon>
-
-		<div id="right-header">
-			<div id="locate-store">
-				<ion-icon name="location" class="li"></ion-icon>
-				<p>Find a store</p>
+		<div id="inner-header">
+			<div id="left-header">
+				<img src="images/logo.svg" id="logo" alt="starbucks logo">
+				<a href="#" class="links hidden">MENU</a>
+				<a href="#" class="links hidden">REWARDS</a>
+				<a href="#" class="links hidden">GIFT CARDS</a>
 			</div>
-			<a href="#" class="links">Sign in</a>
-			<a href="#" class="links">Join now</a>
+			<ion-icon name="menu-outline" class="menu-closed"></ion-icon>
+
+			<div id="right-header">
+				<div id="locate-store">
+					<ion-icon name="location" class="li"></ion-icon>
+					<p>Find a store</p>
+				</div>
+				<a href="#" class="links">Sign in</a>
+				<a href="#" class="links">Join now</a>
+			</div>
 		</div>
 	</header>
 
